--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "test:node": "npm run typescript:build && npm run worker:build && node npm-scripts.js test:node",
     "test:worker": "node npm-scripts.js test:worker",
     "coverage": "npm run worker:build && node npm-scripts.js coverage",
-    "postinstall": "node npm-scripts.js postinstall",
+    "no-postinstall": "node npm-scripts.js postinstall",
     "release": "node npm-scripts.js release"
   },
   "jest": {
